--- a/styles.css
+++ b/styles.css
@@ -167,3 +167,75 @@ footer {
         font-size: 18px;
     }
 }
+/* Estilos para telas menores */
+@media (max-width: 768px) {
+    .navbar {
+        display: none;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+
+    .nav-links {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 10px;
+        background-color: #18471d;
+        width: 100%;
+        max-width: 250px;
+        display: none;
+        z-index: 1;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .nav-links li {
+        margin: 10px 0;
+        text-align: center;
+    }
+
+    .nav-links a {
+        font-size: 18px;
+    }
+
+    .hero-content h1 {
+        font-size: 1.5em;
+    }
+}
+
+/* Estilos para telas muito pequenas */
+@media (max-width: 480px) {
+    .hero-content h1 {
+        font-size: 1.2em;
+    }
+    
+    .nav-links a {
+        font-size: 16px;
+    }
+
+    .section-content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .section-content img {
+        max-width: 100%;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .section-content p {
+        max-width: 100%;
+    }
+
+    .section {
+        padding: 10px;
+        margin: 10px;
+    }
+}
